Project/Code/Executor/exe3/Requests_To_Execute/Hello_World2/log_file.txt
  File "Hello_World.py", line 82
    print "Pardon me, I am extremely tired now. 6 seconds breakint str(6-i) + '.'
                                                                                ^
SyntaxError: EOL while scanning string literal
